# gensdf

./: .gitignore  LICENSE  README.md  environment.yml  test.py  test_single.py  train.py
config/conv_occ/: specs.json
config/deepsdf/: specs.json
config/gensdf/meta/: specs.json
config/gensdf/semi/: specs.json
config/gensdf/semi/last/: evaluate.csv
config/gensdf/semi/last/1Shelves/160684937ae737ec5057ad0f363d6ddd/: reconstruct.ply
config/gensdf/semi/last/1Shelves/1e3df0ab57e8ca8587f357007f9e75d1/: reconstruct.ply
config/gensdf/semi/last/1Shelves/a9c2bcc286b68ee217a3b9ca1765e2a4/: reconstruct.ply
config/neuralpull/: specs.json
data/preprocessing/: CMakeLists.txt  create_split.py  preprocess_script.py  sdf_gen.cpp  sdf_gen_from_pc.cpp
data/splits/: bed_subset.json  lab_split.json  unlab_split.json  unseen_split.json
dataloader/: base.py  labeled_ds.py  meta_ds.py  unlabeled_ds.py
model/: __init__.py  base_pl.py
model/archs/decoders/: conv_occ_arch.py  deepsdf_arch.py  neuralpull_arch.py  siren_arch.py
model/archs/encoders/: conv_pointnet.py
model/conv_occ/: model.py
model/deepsdf/: model.py
model/gensdf/: model.py
model/neuralpull/: model.py
utils/: evaluate.py  mesh.py
